--- a/README
+++ b/README
@@ -5,5 +5,6 @@ these problems are originally designed for prolog
 https://sites.google.com/site/prologsite/prolog-problems/1
 
 total 99 problems
-Lists      - 28 problems
-Arithmatic - 11 problems
+Lists        - 28 problems
+Arithmatic   - 11 problems
+Binary Trees - 18 problems []
